mootiro_komoo/apps/main/static/css/styles.css
/* ... */
.a-update .update-message { max-width: 360px }
.a-update .update-social {
    max-width: 185px;
    text-align: right;
}
.a-update .update-social .vote { margin: 0 }
.a-update .update-social .comments-summary {
    display: inline-block;
    vertical-align: top;
    margin: 0;
}


/* Forms */
form .requiredField .asteriskField { color: #ff3d2e }
form .control-group { clear: both }
form legend {
    padding: 0;
    margin: 0;
    border: none;
}
.form-legend{
    font-weight: bold;
    text-align: center;
    font-size: 1.2em;
    margin: 10px 0 20px;
}
form .form-actions {
    background: none;
    border: none;
    padding: 15px 0;
}
form .formRow { clear: both }
form .formRow > div {
    float: left;
    clear: none;
    margin-right: 5px;
}
form .datepicker { width: 7em }
form #uploader_container { padding: 0 }

#need_form { width: 100% }
#need_form input[type=text], #need_form textarea { width: 100% }
#need_form #div_id_categories ul { display: inline-block }
#need_form #div_id_categories li {
    float: left;
    margin: 0 2px;
}

#investment_form #id_currency { width: 7em }
#investment_form #div_id_investor_type .radio {
    float: left;
    margin-right: 1em;
    padding-top: 0;
}
#investment_form #div_id_investor_type .radio input { margin-top: 0 }

/* Ajax Search */
.ajax-search { float: right }
.ajax-search input {
    width: 200px;
    background: #fff url("../img/glass.png") no-repeat right bottom;
}

/* Object Listing */
/*div.list > div { padding: 5px 20px }*/
/*div.list > div:first-child { padding-top: 20px }*/
/*div.list > div:last-child { padding-bottom: 20px }*/

/* Objects Viewing */
.map-preview {
    width: 200px;
    height: 200px;
    display: block;
    background: #bbb;
}

.map-tooltip {
    display: none;
    position: absolute;
    z-index: 9999;
    padding: 0 0 0 15px;
    background: url("/static/img/infowindow-arrow.png") no-repeat 0 50%;
}
.map-tooltip #map-container-preview {
    background: white;
    padding: 10px;
    border-radius: 5px;
    -moz-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
}
.map-tooltip .close-bttn {
    padding: 5px 5px 3px;
    background: white;
    position: absolute;
    top: 10px;
    right: 10px;
}
/* =========== COMMENT section ======= */
.comments-block { margin-top: 30px }
#divFormComment{
    margin-top: 10px;
}
.comment-container{
    margin:20px 0 15px 15px;
    background-color: rgb(235, 249, 255);
    padding: 10px 0 10px 10px;
    border-radius: 5px;
    border-color: rgb(62, 186, 194);
    border-style: solid;
    border-width: 1px;
}
.comment-container a{
    color: rgb(62, 186, 194);
    margin: 0 15px;
}
.comment-header{
    margin-bottom: 5px;
}
.comment-footer{
    margin-top: 15px;
}
.comment{
    margin: 0 15px;
}
a.btnShowForm{
    font-weight: bold;
    /*font-size: 1.2em;*/
    color: rgb(62, 186, 194);
}
.comment-form{
    display: none;
    margin-left: 15px;
}
.comment-form textarea.markItUpEditor{
    background-color: #ffffff;
    height: 100px;
    max-width: 675px;
}
.inner-comment{
   margin-right: -1px;
   padding-bottom: 0;
   margin-bottom: -1px;
}
.odd{
    background-color: rgb(220, 239, 244);
}
.comments-list .inner-list{
    display: none;
}
.comment-title{
    font-size: 1.2em;
    color: #4f4f4f;
}
.comment-vote{
    margin-left: 10px;
}
.comments-summary {
    display: block;
}
/* =========== end of COMMENT section ======= */


/* =============  VOTES section ============ */

.vote{
    display: inline-block;
    margin: 5px 0 10px 0;
}
.vote a{
    margin: 0 5px;
}
.vote-num{
    color: #777777;
    font-size: 0.9em;
    font-weight:bold;
    vertical-align: top;
    padding-bottom: 2px;
    margin-right: 2px;
}
.vote-up a{
    display: inline-block;
    background: #dddddd url("/static/img/up.png") no-repeat center;
    padding: 3px;
    border-radius: 4px;
    width: 10px;
    height: 10px;
    /*margin: 0 4px;*/
    border: solid 1px #bbbbbb;
}
.vote-up a:hover{
    background-color: #cecece;
    box-shadow: 1px 1px 1px #666666 inset;
    background-image: url("/static/img/up-hover.png");
}
.vote-up.active a{
    background: #dddddd url("/static/img/up-active.png") no-repeat center;
}
.vote-down a{
    display: inline-block;
    background: #dddddd url("/static/img/down.png") no-repeat center;
    padding: 3px;
    border-radius: 4px;
    width: 10px;
    height: 10px;
    /*margin: 0 4px;*/
    border: solid 1px #bbbbbb;
}
.vote-down a:hover{
    background-color: #cecece;
    box-shadow: 1px 1px 1px #666666 inset;
    background-image: url("/static/img/down-hover.png");
}
.vote-down.active a{
    background: #dddddd url("/static/img/down-active.png") no-repeat center;
}

/* =========== end of VOTE section ======= */

/* ======= Pagination (it may clash/overlap with bootstrap) =========*/
.pagination{
  position:relative;
  left: 35%;
}
.pagination .step-links span{
  display: inline-block;
  margin: 0 auto;
  float:left;
}
.pagination .step-links .current{
  float:left;
  padding:0 14px;
  line-height:34px;
  text-decoration:none;
  border:1px solid #ddd;
  border-left-width:0;
}
/* ============= Resources ============== */
/* ### form ### */
#form_resource {
  width: 100%;
}
#form_resource input[type=text], #form_resource textarea{
  width: 100%;
}
#form_resource #div_id_tags .ui-autocomplete-input{
  background: none repeat scroll 0% 0% #fbfbfb; /*rgba(215, 215, 215, 0.2);*/
  box-shadow: 1px 1px 1px rgb(190, 189, 204) ;
}
/* ====== file uploader ======== */
#fileupload{
  font-size: 0.8em;
}
/********************* CHANGES DEFAULT FORM APPEARANCE ****/
form div.tagsinput{
  border: none;
}
form div.tagsinput input{
  border: 1px solid rgb(204, 204, 204);
  background: none repeat scroll 0% 0% rgba(215, 215, 215, 0.2);
  box-shadow: 1px 1px 1px rgb(190, 189, 204) ;
}
/* ... */

